@@ -9,6 +9,7 @@ v2.1.8
 + imdb_person::filmograf() now fills the "addons" information again (for all movie_*() methods)
 ! imdb_person: articles(), interviews() returned garbage if that information was not available
 ! Moviepilot changed API-error message, so instead of displaying the according error we had empty result sets
+! rewrote movieposterdb::parse_list() -- so now the movie posters, logos, covers, etc. should work again
 
 v2.1.7 (15.05.2013)
 -------------------
